# semana11/dulceria_api/app/controllers/dulce_controller.py
@@ -1,8 +1,8 @@
 from flask import Blueprint, request, jsonify
 from models.dulce_model import Dulce
-from models.user_model import User
+
 from views.dulce_view import render_dulce_list, render_dulce_detail
-from views.user_view import render_user_list, render_user_detail
+
 from flask_jwt_extended import verify_jwt_in_request, get_jwt_identity
 from functools import wraps
 from utils.decorators import jwt_required, roles_required
@@ -10,18 +10,17 @@ from utils.decorators import jwt_required, roles_required
 
 # Crear un blueprint para el controlador de Dulces
 dulce_bp = Blueprint("dulce", __name__)
-user_bp = Blueprint("user", __name__)
 
 
-@dulce_bp.route("/Dulces", methods=["GET"])
+@dulce_bp.route("/dulces", methods=["GET"])
 @jwt_required
-def get_Dulces():
-    Dulces = Dulce.get_all()
-    return jsonify(render_dulce_list(Dulces))
+def get_dulces():
+    dulces = Dulce.get_all()
+    return jsonify(render_dulce_list(dulces))
 
 
 # Ruta para obtener un dulce específico por su ID
-@dulce_bp.route("/Dulces/<int:id>", methods=["GET"])
+@dulce_bp.route("/dulces/<int:id>", methods=["GET"])
 @jwt_required
 def get_dulce(id):
     dulce = Dulce.get_by_id(id)
@@ -31,24 +30,24 @@ def get_dulce(id):
 
 
 # Ruta para crear un nuevo dulce
-@dulce_bp.route("/Dulces", methods=["POST"])
+@dulce_bp.route("/dulces", methods=["POST"])
 @jwt_required
 @roles_required(roles=["admin"])
 def create_dulce():
     data = request.json
     print(data)
-    titulo = data.get("titulo")
-    autor = data.get("autor")
-    edicion = data.get("edicion")
-    disponibilidad = data.get("disponibilidad")
+    marca = data.get("marca")
+    peso = data.get("peso")
+    sabor = data.get("sabor")
+    origen = data.get("origen")
 
     # Validación simple de datos de entrada
-    if not titulo or not autor or not edicion or disponibilidad is None:
+    if not marca or not peso or not sabor or origen is None:
         return jsonify({"error": "Faltan datos requeridos"}), 400
 
     # Crear un nuevo dulce y guardarlo en la base de datos
     dulce = Dulce(
-        titulo=titulo, autor=autor, edicion=edicion, disponibilidad=disponibilidad
+        marca=marca, peso=peso, sabor=sabor, origen=origen
     )
     dulce.save()
 
@@ -56,7 +55,7 @@ def create_dulce():
 
 
 # Ruta para actualizar un dulce existente
-@dulce_bp.route("/Dulces/<int:id>", methods=["PUT"])
+@dulce_bp.route("/dulces/<int:id>", methods=["PUT"])
 @jwt_required
 @roles_required(roles=["admin"])
 def update_dulce(id):
@@ -66,21 +65,21 @@ def update_dulce(id):
         return jsonify({"error": "Dulce no encontrado"}), 404
 
     data = request.json
-    titulo = data.get("titulo")
-    autor = data.get("autor")
-    edicion = data.get("edicion")
-    disponibilidad = data.get("disponibilidad")
+    marca = data.get("marca")
+    peso = data.get("peso")
+    sabor = data.get("sabor")
+    origen = data.get("origen")
 
     # Actualizar los datos del dulce
     dulce.update(
-        titulo=titulo, autor=autor, edicion=edicion, disponibilidad=disponibilidad
+        marca=marca, peso=peso, sabor=sabor, origen=origen
     )
 
     return jsonify(render_dulce_detail(dulce))
 
 
 # Ruta para eliminar un dulce existente
-@dulce_bp.route("/Dulces/<int:id>", methods=["DELETE"])
+@dulce_bp.route("/dulces/<int:id>", methods=["DELETE"])
 @jwt_required
 @roles_required(roles=["admin"])
 def delete_dulce(id):
@@ -96,66 +95,4 @@ def delete_dulce(id):
     return "", 204
 
 
-@user_bp.route("/User", methods=["GET"])
-@jwt_required
-def get_Users():
-    Users = User.get_all()
-    return jsonify(render_user_list(Users))
 
-
-# Ruta para obtener un dulce específico por su ID
-@dulce_bp.route("/Users/<int:id>", methods=["GET"])
-@jwt_required
-def get_user(id):
-    user = User.get_by_id(id)
-    if user:
-        return jsonify(render_user_detail(user))
-    return jsonify({"error": "Dulce no encontrado"}), 404
-
-
-# Ruta para crear un nuevo dulce
-@dulce_bp.route("/Users", methods=["POST"])
-@jwt_required
-@roles_required(roles=["admin"])
-def create_user():
-    data = request.json
-    print(data)
-    username = username.get("username")
-    password = password.get("password")
-    roles = roles.get("roles")
-    # Validación simple de datos de entrada
-    if not username or not password or roles is None:
-        return jsonify({"error": "Faltan datos requeridos"}), 400
-    # Crear un nuevo dulce y guardarlo en la base de datos
-    user = User(
-        username=username, password=password, roles=roles
-    )
-    user.save()
-    return jsonify(render_user_detail(user)), 201
-
-
-# Ruta para actualizar un dulce existente
-@user_bp.route("/Users/<int:id>", methods=["PUT"])
-@jwt_required
-@roles_required(roles=["user"])
-def update_user(id):
-    user = User.get_by_id(id)
-    if not user:
-        return jsonify({"error": "User no encontrado"}), 404
-    data = request.json
-    username = data.get("username")
-    password = data.get("password")
-    roles = data.get("roles")
-    user.update(username=username, password=password, roles=roles)
-    return jsonify(render_user_detail(user))
-
-
-@user_bp.route("/Users/<int:id>", methods=["DELETE"])
-@jwt_required
-@roles_required(roles=["admin"])
-def delete_user(id):
-    user = User.get_by_id(id)
-    if not user:
-        return jsonify({"error": "User no encontrado"}), 404
-    user.delete()
-    return "", 204
