# semana11/dulceria_api/app/views/user_view.py
@@ -4,7 +4,7 @@ def render_user_list(users):
         {
             "id": user.id,
             "username": user.username,
-            "password": user.password,
+            "password_hash": user.password_hash,
             "roles": user.roles,
         }
         for user in users
@@ -16,6 +16,6 @@ def render_user_detail(user):
     return {
         "id": user.id,
         "username": user.username,
-        "password": user.password,
+        "password_hash": user.password_hash,
         "roles": user.roles,
     }
