# semana12/libros autentication/app/controllers/user_controller.py
@@ -1,46 +1,0 @@
-from app.database import db
-
-from flask import Blueprint, jsonify, request
-from flask_jwt_extended import create_access_token
-from werkzeug.security import check_password_hash
-
-from models.user_model import User
-
-user_bp = Blueprint("user", __name__)
-
-
-@user_bp.route("/register", methods=["POST"])
-def register():
-    data = request.json
-    username = data.get("username")
-    password = data.get("password")
-    roles = data.get("roles")
-
-    if not username or not password:
-        return jsonify({"error": "Se requieren nombre de usuario y contraseña"}), 400
-
-    existing_user = User.find_by_username(username)
-    if existing_user:
-        return jsonify({"error": "El nombre de usuario ya está en uso"}), 400
-
-    new_user = User(username, password, roles)
-    new_user.save()
-
-    return jsonify({"message": "Usuario creado exitosamente"}), 201
-
-
-@user_bp.route("/login", methods=["POST"])
-def login():
-    data = request.json
-    username = data.get("username")
-    password = data.get("password")
-
-    user = User.find_by_username(username)
-    if user and check_password_hash(user.password_hash, password):
-        # Si las credenciales son válidas, genera un token JWT
-        access_token = create_access_token(
-            identity={"username": username, "roles": user.roles}
-        )
-        return jsonify(access_token=access_token), 200
-    else:
-        return jsonify({"error": "Credenciales inválidas"}), 401
